--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   rxdart: ^0.27.2
   video_player: ^2.0.0
   collection: ^1.15.0
+  transparent_pointer: ^1.0.0
 
 dev_dependencies:
   flutter_test:
